<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/forBackground"
    tools:context=".AboutMeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:background="@color/forContainer"
            android:contentDescription="@string/dummy"
            android:padding="16dp"
            app:srcCompat="@drawable/my_profile" />

        <TextView
            android:id="@+id/my_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/forTitleBg"
            android:fontFamily="monospace"
            android:padding="16dp"
            android:text="@string/my_name"
            android:textColor="@color/forTitle"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/my_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/forTitleBg"
            android:fontFamily="monospace"
            android:padding="16dp"
            android:text="@string/my_email"
            android:textColor="@color/forTitle"
            android:textSize="14sp"
            android:textStyle="italic" />
    </LinearLayout>
</ScrollView>
